# partons

./: .cproject  .gitignore  .gitlab-ci.yml  .project  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  Makefile  PARTONS.doxyfile  README.md  _config.yml  acknowledgements.markdown  build.xml  contact.markdown  index.markdown  license.markdown  partons.pro  partons.properties  qt.pro  readme.txt  run_non_regression_tests.sh  sources.pri  usage.markdown
.github/: CODEOWNERS
.github/workflows/: code-build-test.yml  jekyll-gh-pages.yml  jekyll-pages  jekyll-pages.yml  publish-docker-image.yml
Debug/: makefile
Release/: makefile
_layouts/: default.html
cmake/Modules/: FindCLN.cmake  FindLHAPDF.cmake  FindSFML.cmake
cmake/Version/: PartonsVersion.h_in
cmake/modules/: FindCLN.cmake
cmake/version/: PartonsVersion.h_in
data/: logger.cfg
data/automation/: xmlSchema.xsd
data/config/: .gitignore  logger.properties  partons.properties
data/docker/: Dockerfile.partons  Dockerfile.partons.mysql  Dockerfile.partons.startup  README
data/mathematica/: mathematica_results.txt
data/scenario/: computeOneCamptonFormFactor.xml  computeOneComptonFormFactor.xml  computeOneCrossSectionManyKinematic.xml  computeOneCrossSectionManyKinematicConstantCFF.xml  computeOneFourierObservable.xml  computeOneGPD.xml  computeOneGPDWithEvolution.xml  computeOnePhiObservable.xml  scenario_01.xml  scenario_testBMJ.xml  scenario_test_AcCos2Phi_BMJ_HERMES2012.xml  scenario_test_Alu_BMJ.xml  scenario_validation_BMJ.xml
database/: partons.db
database/insert_experimental_data/: README  create_sql_queries_for_experimental_data
database/sql_query/: gpd_plot.sql  temp.sql
database/sql_schema/: common.sql  convol_coeff_function_layer.sql  create_db.sql  create_db_v2.sql  gpd_layer.sql  mysql5_common.sql  mysql5_convol_coeff_function_layer.sql  mysql5_gpd_layer.sql  mysql5_observable_layer.sql  observable_layer.sql  sqlite3_common.sql  sqlite3_convol_coeff_function_layer.sql  sqlite3_gpd_layer.sql  sqlite3_observable_layer.sql
dependancies/: qcustomplot.cpp  qcustomplot.h
doc/bib/: citations.bib
doc/html/: AcCos2phi_8cpp.html  AcCos2phi_8h.html  Ac_8cpp.html  Ac_8h.html  ActiveFlavorsModule_8cpp.html  ActiveFlavorsModule_8h.html  Alu_8cpp.html  Alu_8h.html  Attributs_8cpp.html  Attributs_8h.html  BCSimplifiedModel_8cpp.html  BCSimplifiedModel_8h.html  BMJ2012Model_8cpp.html  BMJ2012Model_8h.html  BaseModuleFactory_8h.html  BaseModule_8h.html  BaseObjectFactory_8cpp.html  BaseObjectFactory_8h.html  BaseObjectRegistry_8cpp.html  BaseObjectRegistry_8h.html  BaseObject_8cpp.html  BaseObject_8h.html  BaseType_8cpp.html  BaseType_8h.html  CFFModule_8h.html  CFFOutputData_8h.html  CFFService_8h.html  CommonDaoService_8cpp.html  CommonDaoService_8h.html  CommonDao_8cpp.html  CommonDao_8h.html  CompareUtils_8cpp.html  CompareUtils_8h.html  ComparisonData_8cpp.html  ComparisonData_8h.html  ComparisonMode_8cpp.html  ComparisonMode_8h.html  ComparisonReportList_8cpp.html  ComparisonReportList_8h.html  ComparisonReport_8cpp.html  (+877 more)
doc/markdown/: index_documentation.md  partons_configuration.md  partons_contact.md  partons_database.md  partons_database_design.md  partons_database_design_1.md  partons_database_design_2.md  partons_database_design_3.md  partons_database_design_4.md  partons_download.md  partons_external_program.md  partons_models.md  partons_modules.md  partons_new_module.md  partons_new_module_cff.md  partons_new_module_gpd.md  partons_new_module_observable.md  partons_new_module_process.md  partons_on_linux.md  partons_on_mac.md  partons_quick.md  partons_services.md  partons_talks_publ.md  partons_usage.md  partons_usage_cff_1.md  partons_usage_cff_2.md  partons_usage_cff_3.md  partons_usage_cff_4.md  partons_usage_gpd_1.md  partons_usage_gpd_2.md  partons_usage_gpd_3.md  partons_usage_gpd_4.md  partons_usage_obs_1.md  partons_usage_obs_2.md  partons_usage_obs_3.md  partons_usage_obs_4.md  partons_with_eclipse.md  partons_with_hyper-v.md  partons_with_vm.md
doc/style/: customdoxygen.css  customfooter.html  customheader.html  customlayout.xml  customtabs.css  generateSiteMapAndMetaDescription
docs/: Gemfile  _config.yml  index.markdown  instalation.markdown  usage.markdown
eclipse_settings/: CustomEditorProfile.xml  ProjectSettings.xml
include/: ResourceManager.cpp  ResourceManager.h
include/partons/: .gitignore  BaseObject.h  BaseObjectFactory.h  BaseObjectRegistry.h  ComputationConfigurationManager.h  FundamentalPhysicalConstants.h  ModuleObject.h  ModuleObjectFactory.h  ModuleObjectReference.h  Partons.h  PartonsVersion.h  ResourceManager.h  ScenarioManager.h  ServiceObject.h  ServiceObjectRegistry.h  ServiceObjectTyped.h
markdown/: index_documentation.markdown
pywrap/: pypartons.cpp
sql_schema/: create_db.sql  db_model.mwb  fill_db.sql
src/: BaseModule.cpp  BaseModule.h  BaseModuleFactory.cpp  BaseModuleFactory.h  BaseObject.cpp  BaseObject.h  BaseObjectFactory.cpp  BaseObjectFactory.h  BaseObjectManager.cpp  BaseObjectManager.h  BaseObjectRegistry.cpp  BaseObjectRegistry.h  CFFModule.cpp  CFFModule.h  CFFService.cpp  CFFService.h  DVCSCFFModule.cpp  DVCSCFFModule.h  FundamentalPhysicalConstants.h  GK11Model.cpp  GK11Model.h  GPDModule.cpp  GPDModule.h  GPDService.h  GPDservice.cpp  GenericData.h  KinematicVariables.cpp  ListGPDOutputData.cpp  ListGPDOutputData.h  ModuleObject.cpp  ModuleObject.h  ModuleObjectFactory.cpp  ModuleObjectFactory.h  ObservableObjectFactory.cpp  ObservableObjectFactory.h  Partons.cpp  Partons.h  RunningAlphaStrong.cpp  RunningAlphaStrong.h  ScenarioManager.cpp  (+7 more)
src/beans/: ComparisonData.cpp  ComparisonData.h  ComparisonMode.cpp  ComparisonMode.h  ComparisonReportList.cpp  ComparisonReportList.h  Computation.cpp  Computation.h  GenericData.h  Kinematic.cpp  Kinematic.h  KinematicUtils.cpp  List.h  Parameters.cpp  Parameters.h  PerturbativeQCDOrderType.cpp  PerturbativeQCDOrderType.h  QCDOrderType.h  QuarkFlavor.cpp  QuarkFlavor.h  Result.cpp  Result.h  ResultList.h  Scale.cpp  Scale.h  Scenario.cpp  Scenario.h  SortingMode.cpp
(+1883 files in other folders)
